--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "modules/git"]
 	path = modules/git
 	url = git://github.com/Zeelot/kohana-git.git
+[submodule "modules/minion-core"]
+	path = modules/minion-core
+	url = git://github.com/kohana-minion/core.git
